--- a/app/src/main/res/values-sw/strings.xml
+++ b/app/src/main/res/values-sw/strings.xml
@@ -42,6 +42,7 @@
   <string name="ApplicationPreferencesActivity_Off">Zima</string>
   <string name="ApplicationPreferencesActivity_sms_mms_summary">Ujumbe mfupi wa simu %1$s, Ujumbe mfupi wa picha %2$s</string>
   <string name="ApplicationPreferencesActivity_privacy_summary">Kifunga skrini%1$s, Kifunga usajili %2$s</string>
+  <string name="ApplicationPreferencesActivity_privacy_summary_screen_lock">Kifunga Skrini %1$s</string>
   <string name="ApplicationPreferencesActivity_appearance_summary">Mandhari %1$s, Lugha %2$s</string>
   <!--AppProtectionPreferenceFragment-->
   <plurals name="AppProtectionPreferenceFragment_minutes">
@@ -60,6 +61,8 @@
   <string name="AttachmentKeyboard_file">Faili</string>
   <string name="AttachmentKeyboard_contact">Mwasiliani</string>
   <string name="AttachmentKeyboard_location">Eneo</string>
+  <string name="AttachmentKeyboard_Signal_needs_permission_to_show_your_photos_and_videos">Signal inahitaji ruhusa ili kuonyesha picha zako na video.</string>
+  <string name="AttachmentKeyboard_give_access">Ruhusu</string>
   <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">Haiwezi kupata programu ya kuchagua media</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Signal inahitaji idhini ya Hifadhi ili kuunganisha picha, video, au sauti, lakini imekataliwa kabisa. Tafadhali endelea kwenye orodha ya mipangilio ya programu, chagua \"Ruhusa\", na uwezesha \"Hifadhi\".</string>
@@ -460,6 +463,8 @@ Gusa ikoni hii kwenye kicharazio chako:</string>
   <string name="MediaOverviewActivity_sent_by_s_to_s">Umetumwa na %1$s kwa %2$s</string>
   <string name="MediaOverviewActivity_sent_by_you_to_s">Umetumwa na wewe kwa %1$s</string>
   <!--Megaphones-->
+  <string name="Megaphones_introducing_reactions">Kuzindua hisia</string>
+  <string name="Megaphones_tap_and_hold_any_message_to_quicky_share_how_you_feel">Donoa na ushikilie ujumbe wowote ili kwa haraka ushiriki unavyohisi.</string>
   <string name="Megaphones_remind_me_later">Nikumbushe baadaye</string>
   <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Simu ya Signal inaendelea</string>
@@ -567,6 +572,7 @@ Signal inahitaji ruhusa ya Kamera ili kuskani msimbo wa QR, lakini imekataliwa k
   <string name="RatingManager_later">Baadaye</string>
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">Duh, programu ya Play Store inaonekana haijasakinishwa kwenye kifaa chako.</string>
   <!--ReactionsBottomSheetDialogFragment-->
+  <string name="ReactionsBottomSheetDialogFragment_all">Zote%1$d</string>
   <!--ReactionsConversationView-->
   <string name="ReactionsConversationView_plus">+%1$d</string>
   <!--RecipientPreferencesActivity-->
@@ -656,6 +662,7 @@ nambari yako ya simu</string>
   <string name="SharedContactView_add_to_contacts">Ongeza kwa wawasiliani</string>
   <string name="SharedContactView_invite_to_signal">Mwalike kwenye Signal</string>
   <string name="SharedContactView_message">Ujumbe wa Signal</string>
+  <!--SignalPinReminders-->
   <!--Slide-->
   <string name="Slide_image">Picha</string>
   <string name="Slide_sticker">Kibandiko</string>
@@ -1422,7 +1429,19 @@ nambari yako ya simu</string>
   <string name="BaseKbsPinFragment__create_alphanumeric_pin">Unda Nenosiri lenye herufi na nambari</string>
   <string name="BaseKbsPinFragment__create_numeric_pin">Unda Nenosiri lenye nambari</string>
   <!--CreateKbsPinFragment-->
+  <plurals name="CreateKbsPinFragment__pin_must_be_at_least_characters">
+    <item quantity="one">PINI lazima iwe na angalau alama %1$d</item>
+    <item quantity="other">Nenosiri lazima liwe na angalau vibambo %1$d</item>
+  </plurals>
+  <plurals name="CreateKbsPinFragment__pin_must_be_at_least_digits">
+    <item quantity="one">PINI lazima iwe na angalau herufi %1$d</item>
+    <item quantity="other">Nenosiro lazima liwe na angalau nambari %1$d</item>
+  </plurals>
   <string name="CreateKbsPinFragment__create_a_new_pin">Unda Nenosiri jipya</string>
+  <plurals name="CreateKbsPinFragment__you_can_choose_a_new_pin_because_this_device_is_registered">
+    <item quantity="one">Unaweza kuchagua PINI mpya kwa sababu kifaa hiki kimesajiliwa. Kama utasahau PINI yako, unaweza kungoja baada ya siku %1$d ili kusajili upya tena.</item>
+    <item quantity="other">Unaweza kuchagua Nenosiri jipya kwa sababu kifaa hiki kimesajiliwa. Iwapo utasahau Nenosiri lako, utahitajika kusubiri%1$d ili kusajili upya tena.</item>
+  </plurals>
   <string name="CreateKbsPinFragment__create_your_pin">Unda Nenosiri lako</string>
   <!--ConfirmKbsPinFragment-->
   <string name="ConfirmKbsPinFragment__pins_dont_match">Nenosiri hazifanani. Jaribu tena.</string>
@@ -1430,10 +1449,15 @@ nambari yako ya simu</string>
   <string name="ConfirmKbsPinFragment__pin_creation_failed">Uundaji Nenosiri umefeli</string>
   <string name="ConfirmKbsPinFragment__your_pin_was_not_saved">Nenosiri lako halikuhifadhiwa. Tutakuarifu baadaye uliunde tena</string>
   <string name="ConfirmKbsPinFragment__pin_created">Nenosiri limeundwa</string>
+  <string name="ConfirmKbsPinFragment__re_enter_pin">Ingiza tena Nenosiri</string>
+  <string name="ConfirmKbsPinFragment__creating_pin">Inaunda Nenosiri…</string>
   <!--KbsSplashFragment-->
   <string name="KbsSplashFragment__introducing_pins">Uanzishaji Nenosiri</string>
+  <string name="KbsSplashFragment__pins_add_another_level_of_security_to_your_account">Nenosiri huongeza safu zaidi ya usalama kwenye akaunti yako. Unda moja sasa.</string>
   <string name="KbsSplashFragment__learn_more">Jifunze Zaidi</string>
+  <string name="KbsSplashFragment__learn_more_link">https://support.signal.org/hc/en-us/articles/360007059792-Registration-Lock</string>
   <string name="KbsSplashFragment__registration_lock_equals_pin">Kufuli ya Usajili = Nenosiri</string>
+  <string name="KbsSplashFragment__your_registration_lock_is_now_called_a_pin">Kifunga usajili wako sasa kinaitwa Nenosiri, na kinafanya mengi zaidi. Kisasishe sasa.</string>
   <string name="KbsSplashFragment__read_more_about_pins">Soma zaidi kuhusu Nenosiri</string>
   <string name="KbsSplashFragment__update_pin">Sasisha Nenosiri</string>
   <string name="KbsSplashFragment__create_your_pin">Unda Nenosiri lako</string>
@@ -1446,8 +1470,10 @@ nambari yako ya simu</string>
   <string name="KbsReminderDialog__incorrect_pin_try_again">Nenosiri sio sahihi. Jaribu tena.</string>
   <!--AccountLockedFragment-->
   <string name="AccountLockedFragment__account_locked">Akaunti imefungwa</string>
+  <string name="AccountLockedFragment__your_account_has_been_locked_to_protect_your_privacy">Akaunti yako imefungwa ili kulinda faragha yako na usalama wako. Baada ya siku %1$d bila shughuli kwenye akaunti yako utaweza kusajili upya nambari hii ya simu bila kuhitaji Nenosiri lako. Yote yaliyomo yatafutwa.</string>
   <string name="AccountLockedFragment__next">Ifuatayo</string>
   <string name="AccountLockedFragment__learn_more">Jifunze Zaidi</string>
+  <string name="AccountLockedFragment__learn_more_url">https://support.signal.org/hc/en-us/articles/360007059792-Registration-Lock</string>
   <!--KbsLockFragment-->
   <string name="RegistrationLockFragment__enter_your_pin">Ingiza Nenosiri lako</string>
   <string name="RegistrationLockFragment__enter_the_pin_you_created">Ingiza Nenosiri ulilobuni kwa hii akaunti. Hii ni tofauti na nambari za kuthibitisha kupitia Ujumbe mfupi.</string>
@@ -1458,9 +1484,36 @@ nambari yako ya simu</string>
   <string name="RegistrationLockFragment__forgot_pin">Umesahau Nenosiri?</string>
   <string name="RegistrationLockFragment__incorrect_pin">Nenosiri sio sahihi</string>
   <string name="RegistrationLockFragment__forgot_your_pin">Umesahau Nenosiri lako?</string>
+  <string name="RegistrationLockFragment__not_many_tries_left">Sio majaribio mengi yaliyosalia!</string>
+  <plurals name="RegistrationLockFragment__for_your_privacy_and_security_there_is_no_way_to_recover">
+    <item quantity="one">Kwa ajili ya faragha yako na usalama wako, hamna njia yoyote ya kuokoa PINI yako. Kama hukumbuki PINI yako, unaweza kuhakikisha kupitia Ujumbe Mfupi baada ya siku %1$d ya kimya. Katika kesi hii, akaunti yako itafutwa na yote yaliyomo kufutwa.</item>
+    <item quantity="other">Kwa faragha yako na usalama wako, hamna njia yoyote ya kupata tena Nenosiri lako. Iwapo hukumbuki Nenosiri, unaweza kuhakikisha kupitia Ujumbe Mfupi baada ya siku %1$d bila shughuli. Kwenye tukio kama hili, akaunti yako itafutwa na yote yaliyomo kufutwa.</item>
+  </plurals>
+  <plurals name="RegistrationLockFragment__incorrect_pin_d_attempts_remaining">
+    <item quantity="one">PINI si sahihi. Jaribio %1$d limebaki.</item>
+    <item quantity="other">Nenosiri sio sahihi. Majaribio %1$d yamesalia</item>
+  </plurals>
+  <plurals name="RegistrationLockFragment__if_you_run_out_of_attempts_your_account_will_be_locked_for_d_days">
+    <item quantity="one">Kama majaribio yako yataisha akaunti yako itafungwa kwa siku %1$d. Baada ya siku %1$d ya kimya, unaweza kusajili upya bila PINI yako. Akaunti yako itafutwa na yote yaliyomo kufutwa.</item>
+    <item quantity="other">Iwapo majaribio yako yataisha akaunti yako itafungwa kwa siku %1$d. Baada ya siku %1$d bila shuguli, unaweza kusajili upya bila Nenosiri lako. Akaunti yako itafutwa na yote yaliyomo kufutwa.</item>
+  </plurals>
+  <plurals name="RegistrationLockFragment__you_have_d_attempts_remaining">
+    <item quantity="one">Una jaribio %1$d lililobakia.</item>
+    <item quantity="other">Una majaribio %1$d yaliyosalia</item>
+  </plurals>
+  <plurals name="RegistrationLockFragment__d_attempts_remaining">
+    <item quantity="one">Jaribio %1$d lililobakia.</item>
+    <item quantity="other">Majaribio %1$d yamesalia</item>
+  </plurals>
   <!--KBS Megaphone-->
+  <string name="KbsMegaphone__create_a_pin">Unda Nenosiri</string>
+  <string name="KbsMegaphone__pins_add_another_layer_of_security_to_your_signal_account">Nenosiri huongeza safu nyingine ya usalama kwenye akaunti yako ya Signal.</string>
+  <string name="KbsMegaphone__create_pin">Unda Nenosiri</string>
   <string name="KbsMegaphone__introducing_pins">Kuanzisha Nenosiri</string>
+  <string name="KbsMegaphone__your_registration_lock_is_now_called_a_pin">Kifunga usajili wako sasa kinaitwa Nenosiri. Kukisasisha kunachukua sekunde </string>
   <string name="KbsMegaphone__update_pin">Sasisha Nenosiri</string>
+  <string name="KbsMegaphone__well_remind_you_later_creating_a_pin">Tutakukumbusha baadaye. Kuunda Nenosiri kutakuwa lazima baada ya siku %1$d.</string>
+  <string name="KbsMegaphone__well_remind_you_later_confirming_your_pin">Tutakukumbusha baadaye. Kuthibitisha Nenosiri lako kutakuwa ni lazima baada ya siku %1$d.</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Ikoni ya usafiri</string>
   <string name="ConversationListFragment_loading">Inafunguka</string>
@@ -1485,6 +1538,8 @@ nambari yako ya simu</string>
   <string name="preferences_chats__chat_backups">Nakalahifadhi ya Gumzo</string>
   <string name="preferences_chats__backup_chats_to_external_storage">Nakili Gumzo kwa hifadhi ya nje</string>
   <string name="preferences_chats__create_backup">Unda nakalahifadhi</string>
+  <string name="preferences_chats__verify_backup_passphrase">Hakikisha kifungu maneno cha nakilihifadhi</string>
+  <string name="preferences_chats__test_your_backup_passphrase_and_verify_that_it_matches">Jaribu kifungu maneno chako cha nakilihifadhi na uhakikishe kinalingana</string>
   <string name="RegistrationActivity_enter_backup_passphrase">ingiza nenosiri la nakalahifadhi</string>
   <string name="RegistrationActivity_restore">Rejesha</string>
   <string name="RegistrationActivity_backup_failure_downgrade">Haiwezi kuingiza nakalahifadhi kutoka kwa matoleo mapya ya Signal</string>
@@ -1502,6 +1557,10 @@ nambari yako ya simu</string>
   <string name="BackupDialog_disable_and_delete_all_local_backups">Lemaza na futa nakalahifadhi zote za ndani?</string>
   <string name="BackupDialog_delete_backups_statement">Futa nakalahifadhi</string>
   <string name="BackupDialog_copied_to_clipboard">Imenakiliwa kwenye bodi ya kunakili</string>
+  <string name="BackupDialog_enter_backup_passphrase_to_verify">Ingiza kifungu maneno chako cha nakilihifadhi ili kuhakikisha</string>
+  <string name="BackupDialog_verify">Hakikisha</string>
+  <string name="BackupDialog_you_successfully_entered_your_backup_passphrase">Umefaulu kuweka kifungu maneno chako cha nakilihifadhi</string>
+  <string name="BackupDialog_passphrase_was_not_correct">Kifungu maneno hakikuwa sahihi</string>
   <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Signal inahitaji idhini ya hifadhi ya nje ili kuunda nakalahifadhi, lakini imekataliwa kabisa. Tafadhali endelea kwenye mipangilio ya programu, chagua \"Ruhusa\" na uwezeshe \"Hifadhi\".</string>
   <string name="ChatsPreferenceFragment_last_backup_s">Nakalahifadhi ya mwisho: 1%s</string>
   <string name="ChatsPreferenceFragment_in_progress">Inaendelea</string>
@@ -1537,6 +1596,7 @@ Funga ufikiaji wa Signal na ufungaji wa Android au alama za vidole</string>
   <string name="preferences_app_protection__registration_lock_pin">Lock PIN ya usajili</string>
   <string name="preferences_app_protection__registration_lock">Lock ya usajili</string>
   <string name="RegistrationActivity_you_must_enter_your_registration_lock_PIN">Ni lazima uingize Lock PIN yako ya usajili</string>
+  <string name="RegistrationActivity_your_pin_has_at_least_d_digits_or_characters">Nenosiri lako lina angalau nambari au vibambo %d</string>
   <string name="RegistrationActivity_incorrect_registration_lock_pin">Lock PIN ya usajili sio sahihi</string>
   <string name="RegistrationActivity_too_many_attempts">Majaribio mengi mno</string>
   <string name="RegistrationActivity_you_have_made_too_many_incorrect_registration_lock_pin_attempts_please_try_again_in_a_day">Umefanya majaribio mengi ya PIN ya Usajili yasio sahihi. Tafadhali jaribu tena baada ya siku.</string>
