--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -465,6 +465,9 @@
   <string name="Megaphones_introducing_reactions">Einführung von Reaktionen</string>
   <string name="Megaphones_tap_and_hold_any_message_to_quicky_share_how_you_feel">Tippe länger auf eine Nachricht, um schnell deine Reaktion mitzuteilen.</string>
   <string name="Megaphones_remind_me_later">Später erinnern</string>
+  <string name="Megaphones_verify_your_signal_pin">Überprüfe deine Signal-PIN</string>
+  <string name="Megaphones_well_occasionally_ask_you_to_verify_your_pin">Wir fragen dich gelegentlich nach deiner PIN, damit du sie nicht vergisst.</string>
+  <string name="Megaphones_verify_pin">PIN überprüfen</string>
   <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signal-Anruf läuft</string>
   <string name="NotificationBarManager__establishing_signal_call">Signal-Anruf wird hergestellt</string>
@@ -657,6 +660,12 @@
   <string name="SharedContactView_add_to_contacts">Zu Kontakten hinzufügen</string>
   <string name="SharedContactView_invite_to_signal">Zu Signal einladen</string>
   <string name="SharedContactView_message">Signal-Nachricht</string>
+  <!--SignalPinReminders-->
+  <string name="SignalPinReminders_well_remind_you_again_later">Wir erinnern dich später.</string>
+  <string name="SignalPinReminders_well_remind_you_again_tomorrow">Wir erinnern dich morgen.</string>
+  <string name="SignalPinReminders_well_remind_you_again_in_a_few_days">Wir erinnern dich in einigen Tagen.</string>
+  <string name="SignalPinReminders_well_remind_you_again_in_a_week">Wir erinnern dich in einer Woche.</string>
+  <string name="SignalPinReminders_well_remind_you_again_in_a_couple_weeks">Wir erinnern dich in einigen Wochen.</string>
   <!--Slide-->
   <string name="Slide_image">Bild</string>
   <string name="Slide_sticker">Sticker</string>
@@ -1436,7 +1445,7 @@ Schlüsselaustausch-Nachricht für eine ungültige Protokollversion empfangen</s
     <item quantity="other">Da dieses Gerät registriert ist, kannst du eine neue PIN wählen. Falls du deine PIN vergisst, musst du möglicherweise %1$d Tage warten, um dich erneut zu registrieren.</item>
   </plurals>
   <string name="CreateKbsPinFragment__create_your_pin">Deine PIN erstellen</string>
-  <string name="CreateKbsPinFragment__pins_add_an_extra_layer_of_security">PINs fügen eine weitere Sicherheitsebene zu deinem Konto hinzu. Es ist wichtig, dass du dir diese PIN merkst, da sie nicht wiederhergestellt werden kann.</string>
+  <string name="CreateKbsPinFragment__pins_add_extra_security_to_your_account">PINs sichern dein Konto zusätzlich ab und können nicht wiederhergestellt werden. Du benötigst deine PIN, um Signal erneut zu registrieren.</string>
   <!--ConfirmKbsPinFragment-->
   <string name="ConfirmKbsPinFragment__pins_dont_match">PINs stimmen nicht überein. Bitte erneut versuchen.</string>
   <string name="ConfirmKbsPinFragment__confirm_your_pin">Bestätige deine PIN.</string>
