--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -466,6 +466,9 @@
   <string name="Megaphones_introducing_reactions">Bemutakoznak az üzenet kedvelések</string>
   <string name="Megaphones_tap_and_hold_any_message_to_quicky_share_how_you_feel">Koppints és tartsd nyomva bármely üzenetet, hogy gyorsan reagálhass rá!</string>
   <string name="Megaphones_remind_me_later">Emlékeztess később</string>
+  <string name="Megaphones_verify_your_signal_pin">Signal PIN kód hitelesítése</string>
+  <string name="Megaphones_well_occasionally_ask_you_to_verify_your_pin">Időnként megkérünk PIN kódod hitelesítésére, hogy biztosan ne felejtsd el.</string>
+  <string name="Megaphones_verify_pin">PIN hitelesítése</string>
   <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signal hívás folyamatban</string>
   <string name="NotificationBarManager__establishing_signal_call">Signal hívás létesítése</string>
@@ -667,6 +670,12 @@ szám (%s) érvénytelen.
   <string name="SharedContactView_add_to_contacts">Hozzáadás a névjegyzékhez</string>
   <string name="SharedContactView_invite_to_signal">Meghívás a Signal-ba</string>
   <string name="SharedContactView_message">Signal üzenet</string>
+  <!--SignalPinReminders-->
+  <string name="SignalPinReminders_well_remind_you_again_later">Később újra emlékeztetünk.</string>
+  <string name="SignalPinReminders_well_remind_you_again_tomorrow">Holnap újra emlékeztetni fogunk.</string>
+  <string name="SignalPinReminders_well_remind_you_again_in_a_few_days">Pár napon belül újra emlékeztetni fogunk.</string>
+  <string name="SignalPinReminders_well_remind_you_again_in_a_week">Egy héten belül újra emlékeztetni fogunk.</string>
+  <string name="SignalPinReminders_well_remind_you_again_in_a_couple_weeks">Pár héten belül újra emlékeztetni fogunk.</string>
   <!--Slide-->
   <string name="Slide_image">Kép</string>
   <string name="Slide_sticker">Matrica</string>
@@ -1448,7 +1457,6 @@ Kulcs-csere üzenet érkezett érvénytelen protokoll verzióhoz.
     <item quantity="other">Mivel ez a készülék regisztrálva van, ezért lehetőséged van új PIN kód választására. Ha elfelejted a kódodat, csak %1$d várakozást követően regisztrálhatsz újra.</item>
   </plurals>
   <string name="CreateKbsPinFragment__create_your_pin">PIN létrehozása</string>
-  <string name="CreateKbsPinFragment__pins_add_an_extra_layer_of_security">A PIN kód extra biztonságot nyújt Signal fiókod számára. Fontos, hogy megjegyezd ezt a kódot, mivel nem lehet visszaállítani.</string>
   <!--ConfirmKbsPinFragment-->
   <string name="ConfirmKbsPinFragment__pins_dont_match">A PIN kódok nem egyeznek. Próbáld újra!</string>
   <string name="ConfirmKbsPinFragment__confirm_your_pin">PIN visszaellenőrzése.</string>
