--- a/app/src/main/res/values-sq/strings.xml
+++ b/app/src/main/res/values-sq/strings.xml
@@ -465,6 +465,9 @@
   <string name="Megaphones_introducing_reactions">Ju Prezantojmë Reagimet</string>
   <string name="Megaphones_tap_and_hold_any_message_to_quicky_share_how_you_feel">Prekeni dhe mbajeni të prekur cilindo mesazh që të ndani me të tjerët se si ndjeheni prej tij.</string>
   <string name="Megaphones_remind_me_later">Kujtomë më vonë</string>
+  <string name="Megaphones_verify_your_signal_pin">Verifikoni PIN-in tuaj të Signal-it</string>
+  <string name="Megaphones_well_occasionally_ask_you_to_verify_your_pin">Me raste, do t’ju kërkojmë të verifikoni PIN-in tuaj, që kështu të mund ta mbani mend.</string>
+  <string name="Megaphones_verify_pin">Verifikoje PIN-in</string>
   <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Thirrje Signal në zhvillim e sipër</string>
   <string name="NotificationBarManager__establishing_signal_call">Po bëhet thirrje Signal</string>
@@ -662,6 +665,12 @@
   <string name="SharedContactView_add_to_contacts">Shtoje te Kontakte</string>
   <string name="SharedContactView_invite_to_signal">Ftoje në Signal</string>
   <string name="SharedContactView_message">Mesazhe Signal</string>
+  <!--SignalPinReminders-->
+  <string name="SignalPinReminders_well_remind_you_again_later">Do t’jua kujtojmë më vonë.</string>
+  <string name="SignalPinReminders_well_remind_you_again_tomorrow">Do t’jua kujtojmë prapë nesër. </string>
+  <string name="SignalPinReminders_well_remind_you_again_in_a_few_days">Do t’jua kujtojmë prapë pas pak ditësh.</string>
+  <string name="SignalPinReminders_well_remind_you_again_in_a_week">Do t’jua kujtojmë prapë pas një jave.</string>
+  <string name="SignalPinReminders_well_remind_you_again_in_a_couple_weeks">Do t’jua kujtojmë prapë pas dy javësh.</string>
   <!--Slide-->
   <string name="Slide_image">Figurë</string>
   <string name="Slide_sticker">Ngjitës</string>
@@ -1441,7 +1450,7 @@
     <item quantity="other">Mund të zgjidhni një PIN të ri, ngaqë kjo pajisje është e regjistruar. Nëse e harroni PIN-in tuaj, mund të duhet të prisni %1$d ditë për ta riregjistruar.</item>
   </plurals>
   <string name="CreateKbsPinFragment__create_your_pin">Krijoni PIN-in tuaj</string>
-  <string name="CreateKbsPinFragment__pins_add_an_extra_layer_of_security">PIN-et shtojnë te llogaria juaj një shtresë sigurie ekstra. Është e rëndësishme të mbani mend këtë PIN, ngaqë s’mund të rimerret.</string>
+  <string name="CreateKbsPinFragment__pins_add_extra_security_to_your_account">PIN-et shtojnë siguri ekstra te llogaria juaj dhe s’mund të rimerren. Që të riregjistroheni me Signal, do t’ju duhet PIN-i juaj.</string>
   <!--ConfirmKbsPinFragment-->
   <string name="ConfirmKbsPinFragment__pins_dont_match">PIN-et s’përputhen. Riprovoni.</string>
   <string name="ConfirmKbsPinFragment__confirm_your_pin">Ripohoni PIN-in tuaj.</string>
